p4/tests/t021.err
Semantic error on line 5: Variable 'my_rectangle' is an array.
