p4/tests/t021.gpl
string window_title = "p4 t021.gpl";

rectangle my_rectangle[2];

int x = my_rectangle.y;
